# spotify-gdpr-analysis

./: AGENTS.md  README.md  pyproject.toml  spotify_report.html
src/spotify_gdpr_analysis/: __init__.py
src/spotify_gdpr_analysis/analysis/: __init__.py  temporal.py  top.py
src/spotify_gdpr_analysis/io/: __init__.py  streaming_history.py
src/spotify_gdpr_analysis/visualize/: __init__.py  cli.py  report.py  templates.py
tests/: test_streaming_history.py
