[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-gdpr-analysis"
version = "0.0.0"
description = "Analysis and visualization suite for Spotify GDPR data."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
